--- a/news-website/src/index.css
+++ b/news-website/src/index.css
@@ -14,12 +14,14 @@
 }
 
 a {
-  font-weight: 500;
+  font-weight: 600;
   color: #646cff;
   text-decoration: inherit;
+  cursor: pointer;
+  
 }
 a:hover {
-  color: #535bf2;
+  color: #c0c2e2;
 }
 
 body {
